tests/programs/errors/pure_violation.flow
module tests.errors.pure_violation

fn impure_fn(): int {
    return 42
}

fn:pure compute(x: int): int {
    return impure_fn() + x
}
